Mais links internos paraos tipos de Pokémon.

--- a/link/contato.html
+++ b/link/contato.html
@@ -23,13 +23,7 @@
     </ul>
     </nav>
    
-     <li class="carta" data-categoria="Comum" data-preco="600">
-                <img src="./src/imagens/carta-drahven.png" alt="Carta Drahven" />
-                <div class="informacoes">
-                    <h2 class="nome-personagem">Drahven</h2>
-                    <span class="categoria">Categoria: Comum</span>
-                    <span class="preco">R$ 600,00</span>
-                     <a href="http://wa.me/5549988041744?text=Olá, quero comprar a carta Drahven!" class="btn-comprar" target="_blank">Comprar</a>
-                </div>
+     akala
+     
 </body>
 </html>
