--- a/link/type/terrestre.html
+++ b/link/type/terrestre.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokémon</title>
+    <link rel="icon" href="../../imgs/icon/favicon-32x32.png" type="image/ico">
+    <link rel="stylesheet" href="stylefogo.css">
 </head>
+
+
 <body>
-    
-</body>
-</html>
+    <nav id="navbar">
+        <div class="logo"> <a href="../../index.html"><img src="../../imgs/logo.png" alt=""></a> </div>
+        <ul id="menu">
+            <li><a href="../pokemon.html">POKÉMON</a></li>
+            <li><a href="../personagens.html">PERSONAGENS</a></li>
+            <li><a href="https://www.reddit.com/r/PokeMoonSun/" target="_blank">FÓRUM </a></li>
+            <li><a href="https://lista.mercadolivre.com.br/pokemon-sol-e-lua?matt_tool=82557158&matt_word=Default_URL_MLB&matt_source=bing&matt_campaign=MLB_ML_BING_AO_GEN_X_DSA_ALLB_TXS_ALL&matt_campaign_id=382841304&matt_ad_group=DSA%20-%20All%20Pages&matt_match_type=b&matt_network=o&matt_device=c&matt_keyword=mercadolivre%20com&msclkid=aad98fc1588b10c01626e76af19f10d1&utm_source=bing&utm_medium=cpc&utm_campaign=MLB_ML_BING_AO_GEN_X_DSA_ALLB_TXS_ALL&utm_term=mercadolivre%20com&utm_content=DSA%20-%20All%20Pages" target="_blank">LOJA</a></li>
+        </ul>
+    </nav>
