Alterações tipos Pokémon.

--- a/link/type/voador.html
+++ b/link/type/voador.html
@@ -24,17 +24,81 @@
 
    <div class="container">
 
-        <h1 id="titulo">Pokédex Novos Pokémon Sun & Moon</h1>
+        <h1 id="titulo"><span class="itype voador">Voador</span> <div class="tipo"> (tipo)</div> </h1>
 
-     <p class="texto-pokedex">Esta é uma lista dos novos Pokémon da região de Alola em <b>Pokémon Sun & Moon.</b> O Pokédex local é dividido em seções, uma para cada ilha. <br>Use os links abaixo para ver os Pokémon disponíveis em cada ilha.</p>
+     <p class="texto-pokedex">A maioria dos Pokémon do tipo Voador são baseados em pássaros ou insetos, juntamente com algumas criaturas míticas como dragões. Em média, eles são mais rápidos do que qualquer outro tipo. <br> <br> Quase todos os tipos Voador têm o Voador como tipo secundário, geralmente junto com o Normal. Existem apenas três Pokémon do tipo Voador puro (Tornadus, Rookidee, Corvisquire) e seis Pokémon com o Voador como tipo primário (Noibat, Noivern, Corviknight, Cramorant, Bombirdier, Flamigo). A partir da Geração 6, o tipo também foi pareado com todos os outros tipos. <br> <br> Nas Gerações 1 a 3, todos os movimentos do tipo Voador eram categorizados como Físicos.</p>
 
+    <table>
+        <thead>
+            <tr>
+                <td>132</td>
+                <td>4</td>
+                <td>128</td>
+                <td>31</td>
+            </tr>
+        </thead>
+        <tr>
+            <td>Pokémon do tipo voador</td>
+            <td>Pokémon de tipo único</td>
+            <td>Pokémon de tipo duplo</td>
+            <td>Movimentos do tipo voador</td>
+        </tr>
+    </table>
+
+    <section id="container-pro-cons">
+        
+        <section id="pro-cons-ataque">
+         <h1> <i>Prós e contras</i>
+         do ataque </h1>
+
+          <div class="t1"> <img src="../../imgs/check.png" alt=""> <em>Movimentos voadores</em> são super eficazes contra:</div>
+          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+
+         <div class="t1"><img src="../../imgs/not.png" alt=""> <em>Movimentos voadores</em> não são muito eficazes contra:</div>
+          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+
+        </section>
+
+
+        <section id="pro-cons-defesa">
+
+         <h1><i>Prós e contras</i> da defesa </h1>
+
+          <div class="t1"><img src="../../imgs/check.png" alt=""> Esses tipos não têm efeito em Pokémon <em>Voadores</em>:</div>
+          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+
+          <div class="t1"><img src="../../imgs/check.png" alt=""> Esses tipos não são muito eficazes contra Pokémon <em>Voadores</em>:</div>
+          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+
+         <div class="t1"><img src="../../imgs/not.png" alt=""> Esses tipos são super eficazes contra Pokémon <em>Voadores</em>:</div>
+          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+
+        </section>
     
+    </section>
+
+
+
      <p class="jump"> <b>Ir para</b> 
-     <a href="#alola">Alola Forms</a>
-     <a href="#melemele">Ilha Melemele</a>
-     <a href="#akala">Ilha Akala</a>
-     <a href="#ulaula">Ilha Ula’ula</a>
-    <a href="#poni">Ilha Poni</a>
+     <a href="./agua.html" class="itype agua">Tipo Água</a>
+     <a href="./dragao.html" class="itype dragao">Tipo Dragão</a>
+     <a href="./eletrico.html" class="itype eletrico">Tipo Elétrico</a>
+     <a href="./fada.html" class="itype fada">Tipo Fada</a>
+     <a href="./fantasma.html" class="itype fantasma">Tipo Fantasma</a>
+     <a href="./fogo.html" class="itype fogo">Tipo Fogo</a>
+     <a href="./grama.html" class="itype grama">Tipo Grama</a>
+     <a href="./gelo.html" class="itype gelo">Tipo Gelo</a>
+     <a href="./inseto.html" class="itype inseto">Tipo Inseto </a>
+     <a href="./lutador.html" class="itype lutador">Tipo Lutador</a>
+     <a href="./metalico.html" class="itype metalico">Tipo Metálico</a>
+     <a href="./normal.html" class="itype normal">Tipo Normal</a>
+     <a href="./noturno.html" class="itype noturno">Tipo Noturno</a>
+     <a href="./pedra.html" class="itype pedra">Tipo Pedra</a>
+     <a href="./psiquico.html" class="itype psiquico">Tipo Psíquico</a>
+     <a href="./sombrio.html" class="itype sombrio">Tipo Sombrio</a>
+     <a href="./terrestre.html" class="itype terrestre">Tipo Terrestre</a>
+     <a href="./veneno.html" class="itype veneno">Tipo Veneno</a>
+     <a href="./voador.html" class="itype voador">Tipo Voador</a>
      </p>
 
    </div>
