--- a/link/type/voador.html
+++ b/link/type/voador.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon</title>
     <link rel="icon" href="../../imgs/icon/favicon-32x32.png" type="image/ico">
-    <link rel="stylesheet" href="stylevoador.css">
+    <link rel="stylesheet" href="styletype.css">
 </head>
 
 
