--- a/link/type/agua.html
+++ b/link/type/agua.html
@@ -51,11 +51,11 @@
          <h1> <i>Prós e contras</i>
          do ataque </h1>
 
-          <div class="t1"> <img src="../../imgs/check.png" alt=""> <em>Movimentos voadores</em> são super eficazes contra:</div>
-          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+          <div class="t1"> <img src="../../imgs/check.png" alt=""> Movimentos <em>Aquáticos</em> são super eficazes contra:</div>
+          <p> <a href="./fogo.html" class="itype fogo">Fogo</a> <a href="./terrestre.html" class="itype terrestre">Terrestre</a> <a href="./pedra.html" class="itype pedra">Pedra</a> </p> 
 
-         <div class="t1"><img src="../../imgs/not.png" alt=""> <em>Movimentos voadores</em> não são muito eficazes contra:</div>
-          <p> <a href="./grama.html" class="itype grama">Grama</a> <a href="./lutador.html" class="itype lutador">Lutador</a> <a href="./inseto.html" class="itype inseto">Inseto</a> </p> 
+         <div class="t1"><img src="../../imgs/not.png" alt="">  Movimentos <em>Aquáticos</em> não são muito eficazes contra:</div>
+          <p> <a href="./agua.html" class="itype agua">Água</a> <a href="./grama.html" class="itype grama">Grama</a> <a href="./dragao.html" class="itype dragao">Dragão</a> </p> 
 
         </section>
 
